# r-package-manager

./: README.md  flake.nix  fourmolu.yaml  r-package-manager.cabal  r-versions.json
r-pm-project/: r-pm.json
scripts/: generate-r-versions.sh
src/: Cmd.hs  Cran.hs  Handle.hs  Input.hs  Main.hs  Manifest.hs  Nixpkgs.hs  Parsers.hs  Types.hs
templates/: default.nix
templates/app/: flake.nix  r-pm.json
templates/rhino/: .Rprofile  .gitignore  .rscignore  flake.nix  r-pm.json
