cabal-version:   3.0
name:            r-package-manager
version:         0.1.0.0
license:         NONE
author:          Paweł Chabros
maintainer:      pawel.chabros@yahoo.pl
homepage:        https://github.com/pchabros/r-package-manager

extra-source-files:
  README.md

common shared
  ghc-options:
    -Wall -Wincomplete-record-updates -Wincomplete-uni-patterns
    -Wmissing-deriving-strategies -Wunused-foralls -Wunused-foralls
    -fprint-explicit-foralls -fprint-explicit-kinds

  mixins:
    base hiding (Prelude),
    relude (Relude as Prelude, Relude.Container.One),
    relude

  default-extensions:
    DataKinds
    DeriveAnyClass
    DeriveGeneric
    DerivingStrategies
    DerivingVia
    LambdaCase
    MultiWayIf
    NoStarIsType
    OverloadedRecordDot
    OverloadedStrings
    StrictData
    TypeFamilies
    ViewPatterns

  build-depends:
    , aeson
    , aeson-pretty
    , async
    , base          >=4   && <5
    , data-default
    , directory
    , filepath
    , mtl
    , optics-core
    , optparse-applicative
    , profunctors
    , relude        >=1.0
    , shower
    , time

  hs-source-dirs:     src
  default-language:   GHC2021

executable r-package-manager
    import:           shared
    main-is:          Main.hs
    other-modules:
      , Cmd
      , Handle
      , Manifest
